--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ DIV,UL,OL /* Left */
 <div id="text1" style="position:absolute; overflow:hidden; left:422px; top:25px; width:73px; height:28px; z-index:5">
 <div class="wpmd">
 <div><font class="ws16"><B><a href="index.html" title="">HOME</a></B></font></div>
-</div></div>
+</div>
+</div>
 
-<div style="position:absolute;left:0;top:1104px;z-index:999"><a href="http://www.webpage-maker.com"><img border=0 src="images/wpmhome.gif" alt="Web Page Maker, create your own web pages."</a></div>
 
 </body>
 </html>
