--- a/Find.html
+++ b/Find.html
@@ -59,6 +59,13 @@ DIV,UL,OL /* Left */
     cursor: pointer;
     border-radius: 5px; 
 }
+.find-station-button {
+    position: absolute;
+    bottom: 733px;
+    right: 151px;
+    padding: 10px 20px;
+    cursor: pointer;
+    z-index: 2;
 }
 </style>
 
