--- a/Find.html
+++ b/Find.html
@@ -71,9 +71,9 @@ DIV,UL,OL /* Left */
 
 </head>
 <body>
-<div id="image2" style="position:absolute; overflow:hidden; left:2px; top:8px; width:399px; height:285px; z-index:0"><img src="images/WhatsApp Image 2024-08-02 at 16.21.05.jpeg" alt="" title="" border=0 width=399 height=285></div>
+<div id="image2" style="position:absolute; overflow:hidden; left:2px; top:8px; width:399px; height:285px; z-index:4"><img src="images/WhatsApp Image 2024-08-02 at 16.21.05.jpeg" alt="" title="" border=0 width=399 height=285></div>
 
-<div id="image3" style="position:absolute; overflow:hidden; left:0px; top:292px; width:402px; height:802px; z-index:1"><img src="images/WhatsApp Image 2024-08-09 at 15.27.30_615d87d4.jpg" alt="" title="" border=0 width=402 height=802></div>
+<div id="image3" style="position:absolute; overflow:hidden; left:0px; top:292px; width:402px; height:802px; z-index:1"><img src="images/WhatsApp Image 2024-08-09 at 15.27.30_615d87d4.jpg" alt="" title="" border=0 width=402 height=802><button class="find-station-button" onclick="findNearestStation()">Find Nearest Station</button></div>
 
 <div id="html1" style="position:absolute; overflow:hidden; left:828px; top:473px; width:596px; height:393px; z-index:2">
 <!DOCTYPE html>
