--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@ DIV,UL,OL /* Left */
     }
 }
  button {
-   background-color: #4CAF50; 
+   background-color: #df1818; 
     border: none;
-    color: white;
+    color: #003399;
+    /* color: white; */
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
@@ -57,7 +58,13 @@ DIV,UL,OL /* Left */
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-    border-radius: 5px; 
+    border-radius: 5px;
+    transition: background-color 0.3 ease; 
+}
+button:hover {
+    background-color: #c82333;
+    color: #337ab7;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); 
 }
 .find-station-button {
     position: absolute;
