--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ DIV,UL,OL /* Left */
  button {
    background-color: #df1818; 
     border: none;
-    color: #003399;
-    /* color: white; */
+/*     color: #003399; */
+    color: white;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
