--- a/index.html
+++ b/index.html
@@ -32,24 +32,16 @@ DIV,UL,OL /* Left */
  margin-top: 0px;
  margin-bottom: 0px;
 }
-@media (max-width: 768px) { 
-    #image2, #image3, #image4, #image5 {
-        width: 100%; 
-        height: auto;  
-    }
- #html1 {
-        left: 0; 
-        top: auto;
-        width: 100%;
-    }
- #text1 {
-        text-align: center;
-    }
+.container{
+    position: absolute;
+    top: -8px;
+    left: -2px;
 }
- button {
+
+button {
    background-color: #df1818; 
     border: none;
-/*     color: #003399; */
+    /* color: #003399; */
     color: white;
     padding: 10px 20px;
     text-align: center;
@@ -63,7 +55,7 @@ DIV,UL,OL /* Left */
 }
 button:hover {
     background-color: #c82333;
-    color: #337ab7;
+
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); 
 }
 .find-station-button {
@@ -74,15 +66,35 @@ button:hover {
     cursor: pointer;
     z-index: 2;
 }
+
+@media (max-width: 750px) { 
+    #image2, #image3, #image4, #image5 {
+        width: 100%; 
+        height: auto;  
+    }
+ #html1 {
+        left: 473px; 
+        top: auto;
+        width: 100%;
+    }
+ #text1 {
+        text-align: center;
+    }
+}
+ 
+
+
+
 </style>
 
 </head>
 <body>
+    <div class="container">
 <div id="image2" style="position:absolute; overflow:hidden; left:2px; top:8px; width:399px; height:285px; z-index:4"><img src="images/WhatsApp Image 2024-08-02 at 16.21.05.jpeg" alt="" title="" border=0 width=399 height=285></div>
 
-<div id="image3" style="position:absolute; overflow:hidden; left:0px; top:292px; width:402px; height:802px; z-index:1"><img src="images/WhatsApp Image 2024-08-09 at 15.27.30_615d87d4.jpg" alt="" title="" border=0 width=402 height=802><button class="find-station-button" onclick="findNearestStation()">Find Nearest Station</button></div>
+<div id="image3" style="position:absolute; overflow:hidden; left: -1.5px; top:292px; width:402px; height:802px; z-index:1"><img src="images/WhatsApp Image 2024-08-09 at 15.27.30_615d87d4.jpg" alt="" title="" border=0 width=402 height=802><button class="find-station-button" onclick="findNearestStation()">Find Nearest Station</button></div>
 
-<div id="html1" style="position:absolute; overflow:hidden; left:520px; top:473px; width:596px; height:393px; z-index:2">
+<div id="html1" style="position:absolute; overflow:hidden; left: 520px; top:473px; width:596px; height:393px; z-index:2">
 <!DOCTYPE html>
 <html>
 <head>
@@ -161,8 +173,13 @@ button:hover {
 <div id="image5" style="position:absolute; overflow:hidden; left:406px; top:3px; width:995px; height:448px; z-index:4"><img src="images/vote.jpeg" alt="" title="" border=0 width=995 height=448></div>
 
 <div id="text1" style="position:absolute; overflow:hidden; left:422px; top:25px; width:73px; height:28px; z-index:5">
-
+<div class="wpmd">
 </div>
+</div>
+
+</body>
+</html>
+
 
 
 </body>
