--- a/index.html
+++ b/index.html
@@ -72,13 +72,50 @@ button:hover {
         width: 100%; 
         height: auto;  
     }
- #html1 {
+    #html1 {
+        position: static;
         left: 473px; 
         top: auto;
         width: 100%;
     }
- #text1 {
+    #text1 {
         text-align: center;
+    }
+    /* .find-station-button {
+        position: relative;
+        display: block;
+        width: 100%;
+        margin-top: 10px;
+    } */
+}
+
+@media (max-width: 430px) {
+    body {
+        margin: 0;
+    }
+
+    #image2, #image3, #image4, #image5 {
+        width: 100%;
+        height: auto;
+        display: block; 
+        margin-bottom: 10px; 
+    }
+
+    #html1 {
+        position: static; 
+        width: 100%;
+        margin-top: 20px; 
+    }
+
+    #text1 {
+        text-align: center;
+    }
+
+    .find-station-button {
+        position: relative;
+        display: block; 
+        width: 100%;
+        margin-top: 10px; 
     }
 }
  
@@ -101,8 +138,8 @@ button:hover {
     <title>Nearest Polling Station Locator</title>
 </head>
 <body>
-    <h1>Find Your Nearest Polling Station for PEC Election 2024</h1>
-    <button onclick="findNearestStation()">Find Nearest Station</button>
+    <!-- <h1>Find Your Nearest Polling Station for PEC Election 2024</h1>
+    <button onclick="findNearestStation()">Find Nearest Station</button> -->
 
     <script>
         const stations = [
@@ -169,17 +206,11 @@ button:hover {
     </script>
 </body>
 </html></div>
-
-<div id="image5" style="position:absolute; overflow:hidden; left:406px; top:3px; width:995px; height:448px; z-index:4"><img src="images/vote.jpeg" alt="" title="" border=0 width=995 height=448></div>
-
-<div id="text1" style="position:absolute; overflow:hidden; left:422px; top:25px; width:73px; height:28px; z-index:5">
-<div class="wpmd">
 </div>
-</div>
+
 
 </body>
 </html>
-
 
 
 </body>
