--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@ button:hover {
     }
 
     .find-station-button {
-        position: relative;
-        display: block; 
-        width: 100%;
-        margin-top: 10px; 
+        .find-station-button {
+        position: absolute;
+        bottom: 20px;  /* Adjust as needed */
+        left: 50%;
+        transform: translateX(-50%)
     }
 }
  
