--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ button:hover {
 </head>
 <body>
     <!-- <h1>Find Your Nearest Polling Station for PEC Election 2024</h1>
-    <button onclick="findNearestStation()">Find Nearest Station</button> -->
+    <button onclick="findNearestStation()">Find Your Nearest Polling Station</button> -->
 
     <script>
         const stations = [
