--- a/Find.html
+++ b/Find.html
@@ -32,23 +32,16 @@ DIV,UL,OL /* Left */
  margin-top: 0px;
  margin-bottom: 0px;
 }
-@media (max-width: 768px) { 
-    #image2, #image3, #image4, #image5 {
-        width: 100%; 
-        height: auto;  
-    }
- #html1 {
-        left: 0; 
-        top: auto;
-        width: 100%;
-    }
- #text1 {
-        text-align: center;
-    }
+.container{
+    position: absolute;
+    top: -16px;
+    left: -10px;
 }
- button {
-   background-color: #4CAF50; 
+
+button {
+   background-color: #df1818; 
     border: none;
+    /* color: #003399; */
     color: white;
     padding: 10px 20px;
     text-align: center;
@@ -57,7 +50,13 @@ DIV,UL,OL /* Left */
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-    border-radius: 5px; 
+    border-radius: 5px;
+    transition: background-color 0.3 ease; 
+}
+button:hover {
+    background-color: #c82333;
+
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); 
 }
 .find-station-button {
     position: absolute;
@@ -67,23 +66,81 @@ DIV,UL,OL /* Left */
     cursor: pointer;
     z-index: 2;
 }
+
+@media (max-width: 750px) { 
+    #image2, #image3, #image4, #image5 {
+        width: 100%; 
+        height: auto;  
+    }
+    #html1 {
+        position: static;
+        left: 473px; 
+        top: auto;
+        width: 100%;
+    }
+    #text1 {
+        text-align: center;
+    }
+    /* .find-station-button {
+        position: relative;
+        display: block;
+        width: 100%;
+        margin-top: 10px;
+    } */
+}
+
+@media (max-width: 430px) {
+    body {
+        margin: 0;
+    }
+
+    #image2, #image3, #image4, #image5 {
+        width: 100%;
+        height: auto;
+        display: block; 
+        margin-bottom: 10px; 
+    }
+
+    #html1 {
+        position: static; 
+        width: 100%;
+        margin-top: 20px; 
+    }
+
+    #text1 {
+        text-align: center;
+    }
+
+    .find-station-button {
+        .find-station-button {
+        position: absolute;
+        bottom: 20px;  /* Adjust as needed */
+        left: 50%;
+        transform: translateX(-50%)
+    }
+}
+ 
+
+
+
 </style>
 
 </head>
 <body>
+    <div class="container">
 <div id="image2" style="position:absolute; overflow:hidden; left:2px; top:8px; width:399px; height:285px; z-index:4"><img src="images/WhatsApp Image 2024-08-02 at 16.21.05.jpeg" alt="" title="" border=0 width=399 height=285></div>
 
-<div id="image3" style="position:absolute; overflow:hidden; left:0px; top:292px; width:402px; height:802px; z-index:1"><img src="images/WhatsApp Image 2024-08-09 at 15.27.30_615d87d4.jpg" alt="" title="" border=0 width=402 height=802><button class="find-station-button" onclick="findNearestStation()">Find Nearest Station</button></div>
+<div id="image3" style="position:absolute; overflow:hidden; left: -1.5px; top:292px; width:402px; height:802px; z-index:1"><img src="images/WhatsApp Image 2024-08-09 at 15.27.30_615d87d4.jpg" alt="" title="" border=0 width=402 height=802><button class="find-station-button" onclick="findNearestStation()">Find Nearest Station</button></div>
 
-<div id="html1" style="position:absolute; overflow:hidden; left:520px; top:473px; width:596px; height:393px; z-index:2">
+<div id="html1" style="position:absolute; overflow:hidden; left: 520px; top:473px; width:596px; height:393px; z-index:2">
 <!DOCTYPE html>
 <html>
 <head>
     <title>Nearest Polling Station Locator</title>
 </head>
 <body>
-    <h1>Find Your Nearest Polling Station for PEC Election 2024</h1>
-    <button onclick="findNearestStation()">Find Nearest Station</button>
+    <!-- <h1>Find Your Nearest Polling Station for PEC Election 2024</h1>
+    <button onclick="findNearestStation()">Find Your Nearest Polling Station</button> -->
 
     <script>
         const stations = [
@@ -150,12 +207,11 @@ DIV,UL,OL /* Left */
     </script>
 </body>
 </html></div>
-
-<div id="image5" style="position:absolute; overflow:hidden; left:406px; top:3px; width:995px; height:448px; z-index:4"><img src="images/vote.jpeg" alt="" title="" border=0 width=995 height=448></div>
-
-<div id="text1" style="position:absolute; overflow:hidden; left:422px; top:25px; width:73px; height:28px; z-index:5">
-
 </div>
+
+
+</body>
+</html>
 
 
 </body>
