--- a/Find.html
+++ b/Find.html
@@ -60,11 +60,13 @@ button:hover {
 }
 .find-station-button {
     position: absolute;
-    bottom: 744px;
-    right: 151px;
-    padding: 10px 20px;
+    bottom: 739px;
+    right: 107px;
+    padding: 13px 20px;
     cursor: pointer;
     z-index: 2;
+    width: 69%;
+    left: 10px
 }
 
 @media (max-width: 750px) { 
