--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@ button:hover {
 }
 .find-station-button {
     position: absolute;
-    bottom: 739px;
-    right: 107px;
-    padding: 13px 20px;
+    bottom: 742px;
+    right: 151px;
+    padding: 10px 20px;
     cursor: pointer;
-    z-index: 2;
-    width: 69%;
-    left: 10px
+    z-index: 5;
+    width: 55%;
+    top: 1px;
+    font-size: medium;
 }
 
 @media (max-width: 750px) { 
