--- a/Find.html
+++ b/Find.html
@@ -60,13 +60,13 @@ button:hover {
 }
 .find-station-button {
     position: absolute;
-    bottom: 742px;
-    right: 151px;
+    bottom: 740px;
+    right: 144px;
     padding: 10px 20px;
     cursor: pointer;
     z-index: 5;
     width: 55%;
-    top: 1px;
+    top: 4px;
     font-size: medium;
 }
 
@@ -211,6 +211,10 @@ button:hover {
 </body>
 </html></div>
 </div>
+
+
+</body>
+</html>
 
 
 </body>
