--- a/Find.html
+++ b/Find.html
@@ -32,7 +32,7 @@ DIV,UL,OL /* Left */
  margin-top: 0px;
  margin-bottom: 0px;
 }
-body, html { /* Make sure body and html take up full viewport */
+body, html { 
     height: 100%;
     margin: 0;
 }
