--- a/Find.html
+++ b/Find.html
@@ -66,16 +66,17 @@ button:hover {
 }
 .find-station-button {
     position: absolute;
-    top: 80px; /* Position it 20px from the top of the image */
+    top: 80px;
     left: 41%;
-    transform: translateX(-50%); /* Center the button horizontally */
-    padding: 10px 20px;
+    transform: translateX(-50%);
+    padding: 20px 41px;
     background-color: #df1818;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    z-index: 2; 
+    z-index: 2;
+    font-size: 24px;
 }
 #image2 {
     width: 100%;
