--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ DIV,UL,OL /* Left */
  margin-top: 0px;
  margin-bottom: 0px;
 }
-body, html { 
+body, html { /* Make sure body and html take up full viewport */
     height: 100%;
     margin: 0;
 }
@@ -119,11 +119,16 @@ button:hover {
         text-align: center;
     }
     .find-station-button {
-        position: relative;
-        display: block;
-        width: 100%;
-        margin-top: 10px;
-    } 
+        top: 4px;
+        position: absolute;
+        left: 41%;
+        transform: translateX(-50%);
+        padding: 7px 0px;
+        cursor: pointer;
+        z-index: 5;
+        width: 34%;
+        font-size: 14px;
+  }
 }
 
 @media (max-width: 430px) {
@@ -160,16 +165,17 @@ button:hover {
       text-align: center;
     }
     .find-station-button {
+        top: 4px;
         position: absolute;
-        bottom: 20px;
-        left: 50%;
+        left: 41%;
         transform: translateX(-50%);
-        padding: 10px 20px;
+        padding: 7px 0px;
         cursor: pointer;
         z-index: 5;
-        width: 80%; /* Adjust button width as needed */
-        font-size: 14px; /* Adjust button font size as needed */
+        width: 34%;
+        font-size: 14px;
     }
+  }
 
 
 
@@ -197,7 +203,7 @@ button:hover {
         width: 100%;
         margin-top: 20px;
     }  
-}
+
 </style>
 
 </head>
