--- a/Find.html
+++ b/Find.html
@@ -104,6 +104,12 @@ button:hover {
     width: 100%;
     margin-top: 20px;
 }
+@media (max-width: 788px){
+    .find-station-button {
+        top: 41px;
+    }
+}
+
 
 @media (max-width: 750px) { 
     #image2, #image3{
@@ -119,7 +125,7 @@ button:hover {
         text-align: center;
     }
     .find-station-button {
-        top: 4px;
+        top: 15px;
         position: absolute;
         left: 41%;
         transform: translateX(-50%);
@@ -176,6 +182,13 @@ button:hover {
         font-size: 14px;
     }
   }
+
+  @media (max-width: 360px){
+    .find-station-button {
+        top: 2px;
+        font-size: 11px;
+    }
+}
 
 
 
