--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@ button:hover {
     width: 100%;
     margin-top: 20px;
 }
+
+@media (max-width: 828px){
+    .find-station-button {
+        top: 34px;
+    }
+}
 @media (max-width: 788px){
     .find-station-button {
         top: 41px;
