--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@ button:hover {
     left: 41%;
     transform: translateX(-50%);
     padding: 20px 41px;
-    background-color: #df1818;
-    color: white;
+    /* background-color: #df1818; */
+    background-color: rgb(219, 219, 26);
+    color: rgb(34, 32, 32);
     border: none;
     border-radius: 5px;
     cursor: pointer;
     z-index: 2;
     font-size: 24px;
+    font-weight: bold;
 }
 #image2 {
     width: 100%;
