--- a/Find.html
+++ b/Find.html
@@ -61,7 +61,7 @@ button {
     transition: background-color 0.3s ease; 
 }
 button:hover {
-    background-color: #c82333;
+    background-color: #ebe978;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); 
 }
 .find-station-button {
