--- a/Find.html
+++ b/Find.html
@@ -32,7 +32,13 @@ DIV,UL,OL /* Left */
  margin-top: 0px;
  margin-bottom: 0px;
 }
-body, html { /* Make sure body and html take up full viewport */
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body, html { 
     height: 100%;
     margin: 0;
 }
@@ -47,9 +53,9 @@ body, html { /* Make sure body and html take up full viewport */
 }
 
 button {
-   background-color: #df1818; 
+   background-color: rgb(219, 219, 26); 
     border: none;
-    color: white;
+    color: rgb(34, 32, 32);
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
@@ -66,8 +72,8 @@ button:hover {
 }
 .find-station-button {
     position: absolute;
-    top: 80px;
-    left: 41%;
+    top: 70px;
+    left: 40%;
     transform: translateX(-50%);
     padding: 20px 41px;
     /* background-color: #df1818; */
@@ -93,7 +99,8 @@ button:hover {
     height: 100vh;  */
     height: auto;
     display: block;
-    margin: 0; 
+    /* margin: 0;  */
+    margin: -2px 0 0 0;
 }
 
  #image2 img, #image3 img {
@@ -107,11 +114,27 @@ button:hover {
     margin-top: 20px;
 }
 
+@media (max-width: 908px){
+    .find-station-button {
+        top: 52px;
+        padding: 20px 26px;
+        left: 39%;
+    }
+}
+@media (max-width: 876px){
+    .find-station-button {
+        padding: 22px 22px;
+        font-size: 20px;
+        top: 34px;
+    }
+}
+
 @media (max-width: 828px){
     .find-station-button {
         top: 34px;
     }
 }
+
 @media (max-width: 788px){
     .find-station-button {
         top: 41px;
@@ -133,18 +156,26 @@ button:hover {
         text-align: center;
     }
     .find-station-button {
-        top: 15px;
+        top: 13px;
         position: absolute;
         left: 41%;
         transform: translateX(-50%);
-        padding: 7px 0px;
+        padding: 23px 10px;
         cursor: pointer;
         z-index: 5;
-        width: 34%;
-        font-size: 14px;
+        width: 37%;
+        font-size: 15px;
+    }
   }
-}
 
+  @media (max-width: 548px) {
+    .find-station-button{
+        top: 13px;
+        padding: 13px 4px;
+        width: 34%;
+        font-size: 15px;
+    }
+}
 @media (max-width: 430px) {
     body {
         margin: 0;
@@ -179,7 +210,7 @@ button:hover {
       text-align: center;
     }
     .find-station-button {
-        top: 8px;
+        top: 4px;
         position: absolute;
         left: 41%;
         transform: translateX(-50%);
@@ -191,10 +222,15 @@ button:hover {
     }
   }
 
+  @media (max-width: 375px){
+    .find-station-button{
+
+    }
+  }
   @media (max-width: 360px){
     .find-station-button {
-        top: 7px;
-        font-size: 10px;
+        top: 2px;
+        font-size: 11px;
     }
 }
 
@@ -206,12 +242,9 @@ button:hover {
         object-fit: cover;  /* or object-fit: contain, depending on your preference */
     }
 
-    /* #image3 {
-        position: relative; 
-        width: 233px; 
-        height: 100vh; 
-        margin: 0; 
-    } */
+    #image3 {
+        margin: -11px 0 0 0; 
+    }
 
     #image3 img { 
         width: 100%;
@@ -230,11 +263,12 @@ button:hover {
 </head>
 <body>
     <div class="container">
-        <div class="box"></div>
+        
     <div id="image2"><img src="images/WhatsApp Image 2024-08-02 at 16.21.05.jpeg" alt="" title="" border=0 width=399 height=285></div>
 
 <div id="image3"><img src="images/WhatsApp Image 2024-08-09 at 15.27.30_615d87d4.jpg" alt="" title="" border=0 width=402 height=802><button class="find-station-button" onclick="findNearestStation()">Find Your Nearest Polling Station</button></div>
 </div>
+
 
 <div id="html1" style="z-index:2">
         <!-- Your content goes here -->
