--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ button:hover {
         
     <div id="image2"><img src="images/WhatsApp Image 2024-08-02 at 16.21.05.jpeg" alt="" title="" border=0 width=399 height=285></div>
 
-<div id="image3"><img src="images/WhatsApp Image 2024-08-09 at 15.27.30_615d87d4.jpg" alt="" title="" border=0 width=402 height=802><button class="find-station-button" onclick="findNearestStation()">Find Your Nearest Polling Station</button></div>
+<div id="image3"><img src="images/img9.jpg" alt="" title="" border=0 width=402 height=802><button class="find-station-button" onclick="findNearestStation()">Find Your Nearest Polling Station</button></div>
 </div>
 
 
