--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@ button:hover {
 
   @media (max-width: 375px){
     .find-station-button{
-
+        top: 2px;
+        font-size: 11px;
     }
   }
   @media (max-width: 360px){
